--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -54,9 +54,9 @@
         </div>
 
         <div class="mainContainer">
-                <div id="first" style="padding-top: 100px;">Links</div>
-            </div>
-
+                <div id="first" style="padding-top: 50px;">Links</div>
+        </div>
+        <hr class="sep"></hr>
             <div class="mainContainer">
             <div class="row" id="resumeButton">
                 <a style="text-decoration: none;" href={{button1.url}} download="TaylorPayneResume" id="third">         
