--- a/public/style/css/landing.css
+++ b/public/style/css/landing.css
@@ -19,6 +19,11 @@ body.dark-mode{
   color: #fff;
 }
 
+.portrait-container{
+  width: 40px;
+  height: 40px;
+}
+
 #resumeButton{
   background-color: var(--bg);
   min-height: var(--button_height);
