--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -5,7 +5,10 @@
         <link rel="stylesheet" href="./style/css/landing.css">
         <script defer src="../../modeDetect.js"></script>
     </head>
-                    <div class="mainContainer">
+                    <div class="mainContainer" style="flex-direction: row;">
+                        <div class="portrait-container">
+                            <img src="../public/images/portrait.jpeg" alt="Descriptive image alt text">
+                        </div>    
                     <div class="js-type" id="first">{{name}}</div>
                     <div id="second">{{title1}} | {{title2}}</div>
                     <hr class="sep"></hr>
@@ -57,7 +60,7 @@
                 <div id="first" style="padding-top: 50px;">Links</div>
         </div>
         <hr class="sep"></hr>
-            <div class="mainContainer">
+            {{!-- <div class="mainContainer"> --}}
             <div class="row" id="resumeButton">
                 <a style="text-decoration: none;" href={{button1.url}} download="TaylorPayneResume" id="third">         
                     {{button1.text}}
@@ -86,7 +89,7 @@
      
             
               
-            </div>
+            {{!-- </div> --}}
         {{!-- </div> --}}
         </div>
         </div>
