--- a/views/pages/landing.handlebars
+++ b/views/pages/landing.handlebars
@@ -7,14 +7,14 @@
     </head>
                     <div class="mainContainer" style="display: flex; flex-direction: row; ">
                         <div class="portrait-container">
-                            <img src="../../public/images/portrait.jpeg" alt="Descriptive image alt text">
+                            <img src="portrait.jpeg" style="width: 150px; height = 150px; " alt="Descriptive image alt text">
                         </div>    
-                        <div class="mainContainer">
+                        <div class="mainContainer" style="padding-left: 0;">
                             <div class="js-type" id="first">{{name}}</div>
                             <div id="second">{{title1}} | {{title2}}</div>
-                            <hr class="sep"></hr>
                         </div>
                     </div>
+                     <hr class="sep"></hr>
 
             {{!-- Project Header --}}
             <div class="mainContainer">
