--- a/public/style/css/landing.css
+++ b/public/style/css/landing.css
@@ -18,10 +18,10 @@ body.dark-mode{
   background-color: #0A0A0A;
   color: #fff;
 }
-
 .portrait-container{
-  width: 20%;
-  height: 20%;
+  width: 150px;
+  height: 150px;
+  overflow: hidden;
 }
 
 #resumeButton{
